# Projekt

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  ProjektConfig.h  ProjektConfig.h.in  README.md  main.cpp
KmerFinder/: CMakeLists.txt  finder.cpp  finder.h
MinimizerMap/: minimizerMap.cpp  minimizerMap.h
lcsk++/: CMakeLists.txt  lcskpp.cpp  lcskpp.h
lis/: lis.cpp  lis.h
minimizer/: CMakeLists.txt  DnaSequence.cpp  DnaSequence.h  minimizer.cpp  minimizer.h  minimizer_test.cpp
thread_pool/: CMakeLists.txt  thread_pool.cpp
